sites/all/themes/vacation/css/style.css
/* ---------- Overall Specifications ---------- */

html {
  font-size: 100%;
  -webkit-text-size-adjust: 100%;
  line-height: 1.5;
  height: 100%;
  overflow-y: scroll;
  overflow-x: hidden;
  background: #fff;
}

body {
  font-size: 16px;
  min-height: 100%;
  margin: 0;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  font-smoothing: antialiased;
  text-rendering: optimizeLegibility\9;
  font-family: Helvetica, Arial, sans-serif;
  color: #333;
}

a {
  color: #1fbdc5;
}

a:link,
a:visited {
  text-decoration: none;
}

a:hover,
a:active,
a:focus {
  text-decoration: underline;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 1.0em 0 0.5em;
  font-weight: inherit;
}

h1 {
  font-size: 1.357em;
  color: #000;
}

h2 {
  font-size: 1.143em;
}

p {
  margin: 0 0 1.2em;
}

del {
  text-decoration: line-through;
}

tr.odd {
  background-color: #dddddd;
}

img {
  outline: 0;
}

select {
  -webkit-appearance: none;
  -moz-appearance: none;
  -o-appearance: none;
  -ms-appearance: none;
  appearance: none;
}

select::-ms-expand {
  display: none;
}

.clearfix:after {
  font-size: 0;
}


/* ------------------ Reset Styles ------------------ */

.page-vacation-summary #main-wrapper,
.page-vacation-edit #main-wrapper,
.page-vacation-request #main-wrapper,
.page-vacation-search #main-wrapper {
  padding: 0 20px;
}

form .field-multiple-table th {
  border: none;
}

form .draggable {
  display: none;
}

#header {
  text-align: center;
  display: inline-block;
  vertical-align: middle;
  padding-left: 5px;
}

#header img {
  display: block;
}

h1 {
  display: inline-block;
  vertical-align: middle;
  margin: 0;
  font-size: 20px;
}

.view-empty {
  margin: 30px 0;
  text-align: center;
  font-size: 18px;
}

.item-list .pager {
  margin: 15px 0;
}

.item-list .pager li {
  margin: 0;
}


/* message */

.layermbox p {
  margin: 0;
}


/* form */

#vocation-node-form {
  position: relative;
}

label {
  font-size: 16px;
  margin: 3px 0;
  font-weight: normal;
}

.form-textarea,
.form-select,
.form-text {
  padding: 10px 8px;
  font-size: 14px;
  line-height: 1;
  border: 1px solid rgba(44, 44, 43, 0.15);
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  -ms-border-radius: 3px;
  border-radius: 3px;
  width: 100%;
  box-sizing: border-box;
  color: #333;
  background: #fff;
  height: 36px;
  -webkit-appearance: none;
}

.form-item {
  margin: 15px 0;
}

.form-textarea {
  height: 56px;
}

.form-submit {
  background: #d91f3e;
  color: #fff;
  border: none;
  font-size: 17px;
  padding: 10px 20px;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  -ms-border-radius: 3px;
  border-radius: 3px;
  width: 100%;
  -webkit-appearance: none;
  outline: none;
}

.form-submit:disabled {
  background: #a9a2a3;
}

.form-submit:focus {
  outline: none;
}

.form-submit-edit {
  display: block;
  text-align: center;
  box-sizing: border-box;
}

.form-submit-edit:hover {
  text-decoration: none;
  opacity: 0.8;
}

.views-submit-button,
.form-actions {
  margin: 20px 0 30px;
}

.views-table {
  width:100%;
}

.views-table tr {
  border:none;
}

.views-table tr.odd {
  background: #fff;
}

.views-table .views-field {
  font-weight:normal;
}

.views-table .views-field-field-total-days,
.views-table .views-field-nid{
  text-align: center;
}

.page-vacation-summary .views-field,
.page-vacation-search .views-field {
  width: 21%;
  padding: 10px 2%;
  border:none;
}

.page-vacation-summary .pager,
.page-vacation-search .pager {
  margin:20px -20px;
}

.page-vacation-search .views-field-field-leave-duration {
  width: 71%;
}

.page-vacation-search .views-field-field-leave-duration {
  font-size: 14px;
  color: #333;
}

.page-vacation-search .views-field-field-total-days,
.page-vacation-search .views-field-field-type-of-leave,
.page-vacation-search .views-field-field-approver,
.page-vacation-search .views-field-field-comment {
  display: none;
}

.info-popup {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 99999;
  font-size: 14px;
  padding: 20px;
  background: #fff;
}

.info-popup .item {
  border-bottom: solid 1px #ccc;
  overflow: hidden;
}

.info-popup .title {
  float: left;
  width: 90px;
  padding: 10px 8px;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

.info-popup .content {
  margin-left: 90px;
  padding: 10px 8px;
  overflow: hidden;
}

.info-popup .btn-close {
  position: absolute;
  top: 20px;
  right: 20px;
  width: 16px;
  height: 16px;
  font-size: 26px;
  color: #ccc;
  transform: rotate(-45deg);
  line-height: 16px;
  z-index: 2;
}

fieldset {
  border: none;
  padding: 0;
  margin: 0;
}

#edit-field-name {
  /*display: none;*/
}

.popup,
.cc-popup {
  position: fixed;
  left: 0;
  top: 0;
  background: #fff;
  width: 100%;
  height: 100%;
  z-index: 999;
  display: none;
}

.popup-top,
.cc-popup-top {
  padding: 5px 12px;
  text-align: right;
  display: inline-block;
  float: right;
  margin-top: 20px;
}

.close-btn,
.cc-close-btn {
  border: 1px solid #ccc;
  padding: 8px 12px;
  border-radius: 3px;
}

.popup ul,
.cc-popup ul {
  list-style: none;
  margin: 0;
  padding: 0;
  max-height: 90%;
  overflow: auto;
  border-top: 1px solid #ccc;
}

.popup .user-item,
.cc-popup .user-item {
  padding: 8px 15px;
  border-bottom: 1px solid #ccc;
  font-size: 0;
  width: 50%;
  box-sizing: border-box;
  display: inline-block;
}

.popup .user-item:nth-child(odd),
.cc-popup .user-item:nth-child(odd) {
  border-right: 1px solid #ccc;
}

.popup .user-item .image,
.cc-popup .user-item .image {
  display: inline-block;
  vertical-align: middle;
  margin-right: 10px;
}

.popup .user-item .name,
.cc-popup .user-item .name {
  display: inline-block;
  vertical-align: middle;
  font-size: 14px;
}

/* autocomplete */
.ui-widget {
  font-family: Helvetica, Arial, sans-serif;
}

.popup .ui-autocomplete.ui-widget,
.cc-popup .ui-autocomplete.ui-widget {
  display: block !important;
  position: static !important;
  width: auto !important;
  border: none;
  border-top: 1px solid #ccc;
  border-radius: 0;
}

.ui-autocomplete-input.form-text {
  width: calc(100% - 10px);
  margin: 5px 5px 20px;
}

.approver-autocomplete,
.cc-autocomplete {
  width: calc(100% - 63px);
  display: inline-block;
  margin-top: 15px;
}

.selected-approver img,
.user-item img {
  width: 40px;
  height: 40px;
  border-radius: 20px;
  display: block;
  margin: 0 auto;
}

.selected-approver .name,
.selected-cc .name {
  font-size: 12px;
  display: block;
}

#edit-field-approver-und {
  display: none;
}

.add-approver,
.add-cc {
  width: 40px;
  height: 40px;
  background: #eee;
  border-radius: 21px;
  border: 1px solid #ccc;
  color: #aaa;
  background: #eee url('../images/add.png') center center no-repeat;
  background-size: 20px auto;
}

.add-approver,
.selected-approver,
.add-cc,
.selected-cc {
  display: inline-block;
  vertical-align: top;
  text-align: center;
}

.selected-approver .remove-approver,
.selected-cc .remove-cc {
  display: block;
  font-weight: bold;
  font-size: 30px;
  background: red;
  padding: 4px;
  position: absolute;
  width: 10px;
  line-height: 8px;
  height: 10px;
  border-radius: 9px;
  color: #fff;
  right: -7px;
  top: -5px;
}

.selected-approver-field,
.selected-cc-field {
  padding: 0;
  margin: 0;
  list-style: none;
}

.selected-approver-field li,
.selected-cc-field li {
  display: inline-block;
  position: relative;
  margin-right: 10px;
}


/* date */

#edit-field-leave-duration {
  display: none;
}

.form-type-date-popup {
  margin: 0;
}

.date-field,
.form-type-date-popup .date-padding {
  font-size: 0;
}

.date,
.time,
.form-type-date-popup .form-item {
  width: 49%;
  display: inline-block;
  margin: 0;
}

.date,
.form-type-date-popup .form-item:first-child {
  margin-right: 2%
}

.form-type-date-popup .form-item label {
  display: none;
}

.date,
.time,
.date-clear {
  padding: 10px 8px;
  -webkit-appearance: none;
  height: 36px;
  vertical-align: top;
  font-size: 14px;
  line-height: 1;
  font-family: Helvetica, Arial, sans-serif;
}


/* vacation detail */

.node-type-vocation .messages,
.node-type-vocation #page-title,
.node-type-vocation #header {
  display: none;
}

.node-type-vocation .container {
  padding: 0;
}

.detail-header {
  background: #1fbdc5;
  text-align: center;
  padding: 20px 0;
  color: #fff;
}

h2 {
  color: #fff;
  margin: 0 0 10px;
}

.detail-content {
  padding: 0 20px;
}

.detail-content .item {
  padding: 15px 0;
  border-bottom: 1px solid #ccc;
}

.detail-content .item:last-child {
  border: none;
}

.circle-item {
  display: inline-block;
  width: 125px;
  font-size: 14px;
  color: #fff;
  vertical-align: middle;
}

.week {
  display: block;
}

.day,
.month {
  font-size: 20px;
  font-weight: bold;
}

.remaining-days {
  font-size: 34px;
  font-weight: bold;
}

.circle {
  display: inline-block;
  width: 90px;
  height: 50px;
  border-radius: 55px;
  padding: 30px 10px;
  margin-bottom: 6px;
  background: #fff;
  color: #1fbdc5;
  text-align: center;
  font-size: 16px;
  box-shadow: 0px 0px 0px 5px rgba(185, 204, 208, 0.6);
}

.block-ciandt-wechat-vacation {
  margin: 0 20px 30px;
}

.form-item-reject-reason {
  padding: 15px 0;
  border-top: 1px solid #ccc;
  border-bottom: 1px solid #ccc;
  margin: 0 0 20px;
}

.block-ciandt-wechat-vacation .form-submit {
  width: 45%;
}

#edit-approve {
  margin-left: 10%;
  background: #1fbdc5;
}


/* List */
.view-vacation-approved,
.view-vacation-history,
.view-vacation-pending {
  border-top: 1px solid #ccc;
}

.detail-link {
  padding: 10px 20px;
  display: block;
}

.views-row {
  border-bottom: 1px solid #ccc;
  font-size: 0;
  position: relative;
}

.views-row:after {
  content: '';
  position: absolute;
  width: 20px;
  height: 30px;
  background: url('../images/arrow.png') center center no-repeat;
  right: 10px;
  top: 13px;
  background-size: 8px;
}

.views-field {
  display: inline-block;
  vertical-align: middle;
  width: 25%;
  font-size: 14px;
}

.views-field-field-approver,
.views-field-name {
  width: 35%;
}

.view-vacation-history .views-field {
  width: 20%;
}

.view-vacation-history .views-field-field-approver {
  width: 35%;
}

.view-vacation-history .views-field-field-leave-duration {
  width: 100%;
}

.views-field-field-leave-duration {
  width: 100%;
  font-size: 12px;
  color: #999;
}

.tabledrag-toggle-weight-wrapper {
  display: none;
}

.date-display-range {
  display: inline-block;
}


/* page */

.page-user #page-wrapper {
  padding: 0 15px;
}

.pane-system-main-menu ul {
  padding: 0;
  margin: 0;
}

.pane-system-main-menu ul.menu li {
  padding: 0;
  margin: 0;
  list-style: none;
}

.pane-system-main-menu ul.menu li a {
  padding: 10px 20px;
  background: #1fbdc5;
  color: #fff;
  display: block;
  border-bottom: 1px solid #fff;
  text-align: center;
}

.pane-system-main-menu ul.menu li a:hover {
  text-decoration: none;
  background: #db1f3e;
}

